# arax-gRPC

./: .gitignore  defaults.cfg
controller/: CMakeLists.txt  conf.json
controller/include/: definesEnable.h
grpc/: .gitignore  README.md  arax_controller_install
grpc/protos/: arax.proto
grpc/src/: CMakeLists.txt
grpc/src/arax_grpc_client/: arax_grpc_client.cpp  arax_grpc_client.h
grpc/src/server/: CMakeLists.txt  server.cpp  server.h
grpc/src/testing/: .gitignore  CMakeLists.txt  clean_arax.cpp  cpu.json  data.cpp  noop.cpp  noop_grpc.cpp  same_proc.cpp  simple.cpp  simple_grpc.cpp  stress.cpp  stress_grpc.cpp  struct.cpp  vector.cpp
